--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/genai": "^1.27.0",
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "googleapis": "^164.1.0",
     "groq-sdk": "^0.34.0",
     "node-fetch": "^3.3.2",
